[package]
name = "purchase_validate_test"
version = "0.0.1"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
color-eyre = "0.5"
structopt = "0.3"
tokio = {version = "1.16", features = ["full", "tracing"]}
futures = "0.3"
urlencoding = "2.1"
base64 = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio-util = {version = "0.6", features = ["io"]}
serde_yaml = "0.8"
reqwest = {version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"]}