[package]
name = "purchase_validate_test"
version = "0.0.1"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
color-eyre = "0.6"
# human-panic = "1.0"
structopt = "0.3"
tokio = {version = "1.17", features = ["full"]}
futures = "0.3"
base64 = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
log = "0.4"
pretty_env_logger = "0.4"
chrono = {version = "0.4", features = ["serde"]}