[package]
name = "validate_lib"
version = "0.0.1"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers_lib = {path = "../helpers_lib"}
eyre = "0.6"
tokio = {version = "1.17", features = ["full"]}
futures = "0.3"
base64 = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
chrono = {version = "0.4", features = ["serde"]}
sha-1 = "0.10"
slog = {version = "2.7", features = ["max_level_trace", "release_max_level_trace"]}